--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,22 @@
 body {
   font-family: 'Arial', sans-serif;
-  background-color: #f4f4f4;
+  background-color: #007ef2;
   margin: 0;
   padding: 0;
 }
 
 .container {
-  max-width: 600px;
+  max-width: 400px;
   margin: 0 auto;
   padding: 20px;
-  background-color: #fff;
+  background-color: #FF7F00;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 h1 {
-  color: #333;
+  color: #EC2020;
+  text-align: center;
 }
 
 form {
@@ -25,6 +26,7 @@ form {
 
 label {
   font-weight: bold;
+  color: #FF7F00;
 }
 
 input,
@@ -36,8 +38,8 @@ button {
 }
 
 button {
-  background-color: #007bff;
-  color: #fff;
+  background-color: #eae577;
+  color: #8C1717;
   cursor: pointer;
 }
 
